[gd_scene load_steps=11 format=2]

[ext_resource path="res://Ability/Channel/Channel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Ability/Channel/Abilities/ManaBeam/ManaBeam.gd" type="Script" id=2]

[sub_resource type="Gradient" id=7]
colors = PoolColorArray( 1, 1, 1, 1, 0.372549, 0.803922, 0.894118, 1 )

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0, 0.447853 )
colors = PoolColorArray( 0.67451, 0.196078, 0.196078, 1, 0.372549, 0.803922, 0.894118, 1 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0.5, 1 ), 0.0, -3.80749, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 15.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 3.0
scale_random = 1.0
scale_curve = SubResource( 3 )
color_ramp = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 4.0
scale_random = 1.0
color = Color( 0.0509804, 0.615686, 0.752941, 1 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 2
emission_box_extents = Vector3( 5, 5, 1 )
flag_align_y = true
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 100.0
tangential_accel_random = 1.0
scale = 2.0
scale_random = 1.0
color = Color( 0.0509804, 0.615686, 0.752941, 0.639216 )

[node name="ManaBeam" instance=ExtResource( 1 )]
script = ExtResource( 2 )
title = "Mana Beam"
mana_cost = 5
damage = 3
speed = 400.0
max_length = 200.0
growth_time = 0.1
rebound = 0

[node name="Beam" type="RayCast2D" parent="." index="2"]
enabled = true
cast_to = Vector2( 100, 0 )

[node name="Line2D" type="Line2D" parent="Beam" index="0"]
points = PoolVector2Array( 0, 0, 20, 0 )
width = 4.0
default_color = Color( 0.372549, 0.803922, 0.894118, 1 )
gradient = SubResource( 7 )
joint_mode = 1
begin_cap_mode = 2
end_cap_mode = 2

[node name="Tween" type="Tween" parent="Beam" index="1"]

[node name="CastingParticles" type="Particles2D" parent="Beam" index="2"]
emitting = false
amount = 20
lifetime = 0.5
local_coords = false
process_material = SubResource( 4 )

[node name="CollisionParticles" type="Particles2D" parent="Beam" index="3"]
emitting = false
amount = 20
lifetime = 0.3
local_coords = false
process_material = SubResource( 5 )

[node name="BeamParticles" type="Particles2D" parent="Beam" index="4"]
emitting = false
amount = 40
lifetime = 0.7
local_coords = false
process_material = SubResource( 6 )
